--- a/index.css
+++ b/index.css
@@ -1,7 +1,52 @@
 @charset "utf-8";
 
+#fakebox{
+  margin: 0 auto;
+  max-width: 584px;
+}
+
+.search-box{
+  width: 500px;
+  height: 45px;
+  padding-left: 30px;
+  background-repeat: no-repeat;
+  background-position: 8px center;
+  background-size: auto 60%;
+  background-color: #fff;
+  border-left:3px solid #707070;
+  border-top:3px solid #707070;
+  border-right:3px solid #ebebeb;
+  border-bottom:3px solid #ebebeb;
+  border-radius: 25px;
+  color: #555;
+  font-size: 30px;
+  letter-spacing: 0.1em;
+  outline: 0;
+}
+
+.search-button{
+  font-size: 26px;
+  font: bold;
+  width: 110px;
+  height: 53px;
+  border-radius: 25px;
+  border-left:4px solid#ebebeb;
+  border-top:4px solid#ebebeb;
+  border-right:4px solid #707070;
+  border-bottom:4px solid #707070;
+  cursor: pointer;
+  background: linear-gradient(to bottom,#ff6600, #ff0066);
+  color: #fff;
+  position: absolute;
+  margin-left: 12px;
+}
+
+div{
+  display: block;
+}
 body{
-  background: linear-gradient(0deg,#1030e6 20% ,#97a7ff 45%, #1030e6 112%) fixed;
+  background: #97a7ff;
+  background: repeating-linear-gradient(0deg,#1030e6 20% ,#97a7ff 45%, #1030e6 112%) fixed;
   background-size: 152% 207%;
 
   animation: BgAnimation 10s linear infinite;
@@ -11,4 +56,13 @@ body{
   0%{background-position:50% 0%}
   50%{background-position:50% 100%}
   100%{background-position:50% 0%}
+}
+
+h1{
+  text-align: center;
+  padding-top: 150px;
+  padding-bottom: 100px;
+  position: relative;
+  font-size: 90px;
+  color: #fff;
 }
