--- a/index.css
+++ b/index.css
@@ -1,8 +1,56 @@
 @charset "utf-8";
 
-#fakebox{
+#fake-box{
   margin: 0 auto;
   max-width: 700px;
+}
+#image-list {
+  margin: 0 auto;
+  padding: 30px 50px;
+  width: 900px;
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+#igmage-list li {
+  width: 250px;
+  height: 250px;
+  margin: 20px;
+  background-color: #666666;
+}
+#image-list a {
+  width: 100%;
+  height: 100%;
+  /* センタリング */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+/*ポップアップ　モーダル表示*/
+#graydisplay {
+  background: rgba(0,0,0,0.8);
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+#graydisplay img {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  max-width: 85%;
+  max-height: 85%;
+  height: auto;
+  width: auto;
+
 }
 
 .fake-area{
@@ -47,9 +95,22 @@
   float: left;
 }
 
-div{
-  display: block;
+.borderbox{
+  margin-left: 20px;
+  margin-top: 25px;
+  margin-right: 20px;
+  margin-bottom: 25px;
+  border-left:3px solid #fff;
+  border-top:3px solid #fff;
+  border-right:3px solid #fff;
+  border-bottom:3px solid #fff;
+  float: left;
 }
+
+.indention{
+  clear: both;
+}
+
 body{
   background: repeating-linear-gradient(0deg,#1030e6 20% ,#97a7ff 45%, #1030e6 112%) fixed;
   background-size: 152% 207%;
@@ -57,7 +118,7 @@ body{
   -moz-animation: BgAnimation 10s linear infinite;
   animation: BgAnimation 10s linear infinite;
 }
-@-webkit-keyframes BgAnimation {
+/* @-webkit-keyframes BgAnimation {
   0%{background-position:50% 0%}
   100%{background-position:200% 200%}
 }
@@ -68,7 +129,7 @@ body{
 @keyframes BgAnimation {
   0%{background-position:50% 0%}
   100%{background-position:200% 200%}
-}
+} */
 
 h1{
   text-align: center;
