--- a/index.css
+++ b/index.css
@@ -3,6 +3,8 @@
 #fake-box{
   margin: 0 auto;
   max-width: 700px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 #image-list {
   margin: 0 auto;
@@ -120,7 +122,7 @@ body{
   -moz-animation: BgAnimation 10s linear infinite;
   animation: BgAnimation 10s linear infinite;
 }
-@-webkit-keyframes BgAnimation {
+/* @-webkit-keyframes BgAnimation {
   0%{background-position:50% 0%}
   100%{background-position:200% 200%}
 }
@@ -131,18 +133,18 @@ body{
 @keyframes BgAnimation {
   0%{background-position:50% 0%}
   100%{background-position:200% 200%}
-}
+} */
 
 h1{
   text-align: center;
-  padding-top: 150px;
-  padding-bottom: 100px;
+  padding-top: 120px;
+  padding-bottom: 50px;
   position: relative;
   font-size: 90px;
   color: #fff;
 }
 h2{
   text-align: center;
-  font-size: 50px;
+  font-size: 30px;
   color: #fff;
 }
