--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
 }
 #image-list {
   margin: 0 auto;
-  padding: 30px 50px;
+  padding: 30px 0px;
   width: 900px;
   list-style-type: none;
   display: flex;
@@ -23,11 +23,15 @@
 #image-list a {
   width: 100%;
   height: 100%;
-  /* センタリング */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+#image-list h2 {
+  text-align: center;
+  font-size: 30px;
+  color: #fff;
 }
 /*ポップアップ　モーダル表示*/
 #graydisplay {
@@ -54,14 +58,13 @@
   width: auto;
 
 }
-
 .fake-area{
 	background: linear-gradient(100deg,#ebebeb,#707070);
-    border-radius: 25px;
-    padding: 4px;
-    width: 110px;
-    height: 45px;
-    float: right;
+  border-radius: 25px;
+  padding: 4px;
+  width: 110px;
+  height: 45px;
+  float: right;
 }
 
 .search-box{
@@ -109,12 +112,6 @@
   float: left;
 }
 
-/* .indention{
-  clear: both;
-} */
-
-
-
 body{
   background: repeating-linear-gradient(0deg,#1030e6 20% ,#97a7ff 45%, #1030e6 112%) fixed;
   background-size: 152% 207%;
@@ -122,7 +119,7 @@ body{
   -moz-animation: BgAnimation 10s linear infinite;
   animation: BgAnimation 10s linear infinite;
 }
-/* @-webkit-keyframes BgAnimation {
+@-webkit-keyframes BgAnimation {
   0%{background-position:50% 0%}
   100%{background-position:200% 200%}
 }
@@ -133,7 +130,7 @@ body{
 @keyframes BgAnimation {
   0%{background-position:50% 0%}
   100%{background-position:200% 200%}
-} */
+}
 
 h1{
   text-align: center;
@@ -147,4 +144,85 @@ h2{
   text-align: center;
   font-size: 30px;
   color: #fff;
+}
+
+@media screen and (max-width: 500px) {
+  /* スマホ用のスタイル */
+  #fake-box{
+    margin: 0 auto;
+    max-width: 300px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+  #image-list {
+    margin: 0 auto;
+    padding: 30px 0px;
+    width: 300px;
+    list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .search-box{
+    width: 250px;
+    height: 30px;
+    padding-left: 30px;
+    background-repeat: no-repeat;
+    background-position: 8px center;
+    background-size: auto 60%;
+    background-color: #fff;
+    border-left:3px solid #707070;
+    border-top:3px solid #707070;
+    border-right:3px solid #ebebeb;
+    border-bottom:3px solid #ebebeb;
+    border-radius: 25px;
+    color: #555;
+    font-size: 20px;
+    letter-spacing: 0.1em;
+    outline: 0;
+  }
+  .fake-area{
+    background: linear-gradient(100deg,#ebebeb,#707070);
+    border-radius: 25px;
+    padding: 4px;
+    width: 65px;
+    height: 30px;
+    float: right;
+  }
+  .search-button{
+    border: 0;
+    font-size: 18px;
+    width: 65px;
+    height: 30px;
+    text-align: center;
+    border-radius: 25px;
+    cursor: pointer;
+    background: linear-gradient(to bottom,#ff6600, #ff0066);
+    color: #fff;
+    position: absolute;
+    float: left;
+  }
+  .borderbox{
+    margin-left: 20px;
+    margin-top: 25px;
+    margin-right: 20px;
+    margin-bottom: 25px;
+    border-left:3px solid #fff;
+    border-top:3px solid #fff;
+    border-right:3px solid #fff;
+    border-bottom:3px solid #fff;
+    float: left;
+  }
+  h1{
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    position: relative;
+    font-size: 37px;
+    color: #fff;
+  }
+  h2{
+    text-align: center;
+    font-size: 15px;
+    color: #fff;
+  }
 }
